--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.tiptap, ProseMirror{
+    color: #fff;
+}
+
 .ProseMirror:focus {
     outline: none;
 }
